Refactor Lease Auth controller, support implicit lease ID
