# modules/swagger.yaml
@@ -728,6 +728,75 @@ paths:
         passthroughBehavior: "when_no_match"
       security:
         - sigv4: []
+  "/leases/auth":
+    options:
+      summary: CORS support
+      description: |
+        Enable CORS by returning correct headers
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - CORS
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: |
+            {
+              "statusCode" : 200
+            }
+        responses:
+          "default":
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Methods: "'*'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: |
+                {}
+      responses:
+        200:
+          description: Default response for CORS method
+          headers:
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Origin:
+              type: "string"
+    post:
+      summary: Create lease authentication by for the requesting user's active lease
+      produces:
+        - application/json
+      responses:
+        201:
+          schema:
+            $ref: "#/definitions/leaseAuth"
+          headers:
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Origin:
+              type: "string"
+        403:
+          description: "Failed to retrieve lease authentication"
+        404:
+          description: "No active lease exists for the requesting user"
+        500:
+          description: "Server failure"
+        401:
+          description: "Unauthorized"
+      x-amazon-apigateway-integration:
+        uri: ${lease_auth_lambda}
+        httpMethod: "POST"
+        type: "aws_proxy"
+        passthroughBehavior: "when_no_match"
+      security:
+        - sigv4: []
+
   "/leases/{id}/auth":
     options:
       summary: CORS support
